# scrib

./: README.md  pyproject.toml
src/scrib/: __init__.py  gui.py  main.py  pdf_handler.py
